	Fixed: Security issue - Input data for software instances are not validated correctly (Software Installer)

INSTALLER
	Fixed: Error about unknown IP when attempting to add new IP
	Fixed: lo must not be used as default device when adding new IP (installer)
	Fixed: Unable to upgrade to 1.1.14 (packages file is corrupted - Ubuntu Precise)

PLUGINS
	Fixed: Errors not catched on change when the __need_change__ flag is set

------------------------------------------------------------------------------------------------------------------------
1.1.14
------------------------------------------------------------------------------------------------------------------------

2014-09-15: Laurent Declercq
	RELEASE i-MSCP 1.1.14

DAEMON
	Fixed: Wrong version in 'helo' answer string

ENGINE
	Deprecated: Usage of iMSCP::HooksManager package is now deprecated and will be removed in later version
	Fixed: autoinstaller::Functions::doImscpBackup: Name "main::execmode" used only once...
	Fixed: Undefined value in tracker hash (vlogger)
	Renamed: iMSCP::HooksManager to iMSCP::EventManager (iMSCP::HooksManager is now an alias of iMSCP::EventManager)

GUI
	Fixed: Malformed href attributes in alias.php (reseller level)
	Fixed: Malformed href attribute in ticket_system.tpl (admin/reseller levels)
	Fixed: Unable to add custom CNAME DNS resource record using the arobase symbol which is substituted by the zone root
	Updated: Layout according changes from vendor libraries

INSTALLER
	Changed: Downgrade of SQL server is no longer allowed by installer
	Changed: Package uninstallation task is now triggered after packages installation
	Fixed: Accessing non existing config value DATABASE_USER_HOST (upgrade issue)
	Fixed: Composer home directory has been reset back to /root/.composer by mistake
	Fixed: Dangling symlinks are not removed when switching from ITK to another httpd server implementation (Jessie)